--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ span {
   text-transform: uppercase;
   letter-spacing: 7px;
   font-size: 25px;
+  font-weight: bold;
   line-height: 1;
   text-shadow: 0 4px 12px rgba(0,0,0,0.75);
   font-family: 'Lato', sans-serif;
@@ -118,6 +119,9 @@ body.arcade header {
 }
 body.clock header {
     --header-image: url('media/ClockArtProject/FinalPiece.png');
+}
+body.il header {
+    --header-image: url('media/InterestLaunch/ABM_0988.jpg');
 }
 
 
@@ -282,7 +286,7 @@ body.clock header {
     background-image: url('media/ClockArtProject/FinalPiece.png');
 }
 .project3 {
-    background-image: url('media/project3.jpg');
+    background-image: url('media/InterestLaunch/ABM_0988.jpg');
 }
 
 /* Footer */
