Added framework for impeller optimization project page, forcing update due to malfunctioning site

--- a/style.css
+++ b/style.css
@@ -123,6 +123,9 @@ body.clock header {
 body.il header {
     --header-image: url('media/InterestLaunch/ABM_0988.jpg');
 }
+body.impeller header {
+    /* TODO */
+}
 
 
 /* ---------------- */
@@ -287,6 +290,9 @@ body.il header {
 }
 .project3 {
     background-image: url('media/InterestLaunch/ABM_0988.jpg');
+}
+.project4 {
+    /* TODO */
 }
 
 /* Footer */
